# scratchnn

./: .gitignore  CLAUDE.md  DGP-markov.md  README.md  pyproject.toml
inductive-biases/: .gitignore  README.md  pyproject.toml
inductive-biases/book/: Makefile  alex.sty  book.tex  preamble.tex  references.bib
inductive-biases/book/chapters/ch01/: 01-foundations-to-limits.tex  02-mlp-backprop.tex  03-output-heads.tex  04-logits-logprobs.tex  05-inductive-biases.tex  06-stability-to-autograd.tex  bib-notes.tex  ch01.tex
inductive-biases/book/chapters/ch02/: 01-frame-and-catalogue.tex  02-canonical-link.tex  03-poisson.tex  04-heteroscedastic.tex  05-link-likelihood-mdn.tex  06-synthesis-library-handoff.tex  bib-notes.tex  ch02.tex
inductive-biases/book/chapters/ch03/: 01-conv-and-sharing.tex  02-conv-code.tex  03-digits-and-control.tex  04-bias-and-boundary.tex  bib-notes.tex  ch03.tex
inductive-biases/book/chapters/ch04/: 01-arch-and-embedding.tex  02-biases-and-training.tex  03-alice-experiment.tex  04-limits-map-handoff.tex  bib-notes.tex  ch04.tex
inductive-biases/book/chapters/ch05/: 01-prior-and-cell.tex  02-equivariance-bptt-vanishing.tex  03-experiment-and-comparison.tex  04-pattern-and-handoff.tex  bib-notes.tex  ch05.tex
inductive-biases/book/chapters/ch06/: 01-lookup-and-task.tex  02-depth-and-multihead.tex  03-scaling-and-investigation.tex  04-fix-and-verification.tex  05-three-axes-and-appendix.tex  bib-notes.tex  ch06.tex
inductive-biases/book/chapters/ch07/: 01-setup-and-circuit.tex  02-m8-analysis.tex  03-induction-and-icl.tex  04-scaling-the-lens.tex  05-closing.tex  bib-notes.tex  ch07.tex
inductive-biases/book/chapters/ch08/: 01-trichotomy-and-mdp.tex  02-reinforce.tex  03-gridworld.tex  04-aixi-and-axis.tex  05-closing.tex  bib-notes.tex  ch08.tex
inductive-biases/book/parts/: part1.tex  part2.tex  part3.tex
inductive-biases/docs/superpowers/: bookwright.config.yaml
inductive-biases/docs/superpowers/plans/: 2026-06-03-chapter1-foundations.md  2026-06-03-chapter2-output-heads.md  2026-06-03-chapter3-cnn.md  2026-06-03-chapter4-fixed-context-lm.md  2026-06-03-chapter5-rnn.md  2026-06-03-chapter6-transformer.md  2026-06-03-part1-integration-pass.md  2026-06-03-part2-integration-pass.md  2026-06-05-chapter7-interpretability.md  2026-06-06-chapter8-rl.md  2026-06-07-part3-integration-pass.md
inductive-biases/docs/superpowers/reviews/: 2026-06-03-ch01.md  2026-06-03-ch02.md  2026-06-03-part1.md  2026-06-03-part2.md  2026-06-06-ch07.md  2026-06-07-book.md  2026-06-07-ch08.md
inductive-biases/docs/superpowers/specs/: 2026-06-02-master-design.md  2026-06-02-part1-design.md  2026-06-03-part2-design.md  2026-06-04-part3-design.md
inductive-biases/notebooks/: _build_ch04_nb.py  _build_ch05_nb.py  _build_ch06_nb.py  _build_ch07_nb.py  _build_ch08_nb.py  ch01-foundations.ipynb  ch02-output-heads.ipynb  ch03-cnn.ipynb  ch04-fixed-context-lm.ipynb  ch05-rnn.ipynb  ch06-transformer.ipynb  ch07-interpretability.ipynb  ch08-rl.ipynb
(+54 files in other folders)
