[project]
name = "inductive-biases-notebooks"
version = "0.1.0"
description = "Computational notebooks for the book Inductive Biases in Neural Networks"
requires-python = ">=3.10"
dependencies = [
    "jupyter",
    "numpy",
    "matplotlib",
]

# The book's pure-Python library lives in the parent repo; install it editable
# for use in notebooks with:  uv pip install -e ../..
[tool.uv]
package = false
